2006-06-09  Jon A. Cruz  <jon@joncruz.org>

	* packaging/macosx/Resources/etc/fonts/fonts.conf:

	  Applied patch #1505765.

2006-06-09  Jon A. Cruz  <jon@joncruz.org>

	* src/object-snapper.cpp, src/selection.cpp, src/selection.h, src/seltrans.cpp:

	  Applied patch #1503864.

2006-06-09  Jon A. Cruz  <jon@joncruz.org>

	* src/widgets/toolbox.cpp:

	  Handle case when function call fails.
	  Fixes bug #1501150.

2006-06-07  Jon A. Cruz  <jon@joncruz.org>

	* src/seltrans.cpp:

	  Work-around for seltrans not getting calls to grab() and ungrab() as expected.
	  Fixes bug #1501156.

2006-06-07  Jon A. Cruz  <jon@joncruz.org>

	* src/widgets/toolbox.cpp:

	  Applied patch #1502407.
	  Fixes bug #1500049.

2006-06-07  Jon A. Cruz  <jon@joncruz.org>

	* packaging/macosx/ScriptExec/main.c, packaging/osx-app.sh:

	  Fixing OS X fc-cache problem.
	  Applied patch #1502063.

2006-06-07  Jon A. Cruz  <jon@joncruz.org>

	* src/sp-item-group.cpp, src/sp-path.cpp, src/sp-star.cpp,
	  src/sp-switch.cpp, src/ui/widget/ruler.cpp:

	  Applied patch #1501709.

2006-06-05  Jon A. Cruz  <jon@joncruz.org>

	* trace/siox.cpp, trace/siox.h, trace/trace.cpp,
	  src/ui/dialog/tracedialog.cpp:

	  Applied patch #1501375.

2006-06-05  Jon A. Cruz  <jon@joncruz.org>

	* trace/siox.cpp, trace/trace.cpp:

	  Applied patch #1501134.

2006-06-05  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/layers-panel.cpp:

	  Allow action when no layer selected.
	  Fixes bugs #1494646.

2006-06-05  Jon A. Cruz  <jon@joncruz.org>

	* trace/siox.cpp:

	  Applied patch #1500659.

2006-06-05  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/layers-panel.h, src/dialogs/layers-panel.cpp:

	  Blocked signal when changes are not from the layers UI.
	  Fixes bugs #1495406 and most of #1494646.

2006-06-02  Colin Marquardt  <colin@marquardt-home.de>

	* TRANSLATORS: Add Stefan Graubner.

2006-06-01  Jon A. Cruz  <jon@joncruz.org>

	* src/extension/internal/pdf-mini.h
